Support Final Grades verduidelijkt

--- a/A-Z/Grades/FinalGrades/Final_Grades_22-23.html
+++ b/A-Z/Grades/FinalGrades/Final_Grades_22-23.html
@@ -1,10 +1,8 @@
-<!-- Welke file van Archief is meest up to date? -->
+<!-- Anchor top -->
+<p><a id="topmenu"></a></p>
 
 <!-- Banner -->
 <p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129455/preview" alt="FinalGradesMenuBanner-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129455" data-api-returntype="File" /></p>
-
-<!-- Anchor top -->
-<p><a id="topmenu"></a></p>
 
 <!-- Menubalk -->
 <div class="grid-row">
@@ -49,12 +47,28 @@
             </div>
             </a>
         </li>
+        <!-- Links werken niet
         <li>
           <a href="#tab-3" style="background-color: #ffffff;">
             <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;">
                 <p><strong>Examples</strong></p>
             </div>
             </a>
+        </li>
+        -->
+        <li>
+            <a href="#tab-4" style="background-color: #ffffff;">
+              <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;">
+                  <p><strong>Support with calculation setup</strong></p>
+              </div>
+              </a>
+        </li>
+        <li>
+            <a href="#tab-5" style="background-color: #ffffff;">
+              <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;">
+                  <p><strong>Support with SIS grades</strong></p>
+              </div>
+              </a>
         </li>
     </ul>
 
@@ -170,7 +184,7 @@
         <p style="text-align: center;"><iframe style="width: 1050px; height: 525px;" title="Final Grades Tool" src="https://canvas.uva.nl/courses/8175/external_tools/retrieve?display=borderless&amp;resource_link_lookup_uuid=a7e96063-a2be-4e91-860c-ceb07c627023&amp;url=https%3A%2F%2Fvideo-kaf.ic.uva.nl%2Fbrowseandembed%2Findex%2Fmedia%2Fentryid%2F0_ec9p05ze%2FshowDescription%2Ffalse%2FshowTitle%2Ffalse%2FshowTags%2Ffalse%2FshowDuration%2Ffalse%2FshowOwner%2Ffalse%2FshowUploadDate%2Ffalse%2FplayerSize%2F400x620%2FplayerSkin%2F23449954%2FisPlaylist%2Ftrue%2F" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *"></iframe></p>
     </div>
 
-    <!-- EXAMPLES (tab-3) -->
+    <!-- EXAMPLES (tab-3)  LINKS WERKEN NIET
     <div id="tab-3" style="background-color: #ffffff;">
         <h3 style="text-align: center;">Examples</h3>
         <div class="grid-row">
@@ -196,6 +210,118 @@
             </div>
         </div>
     </div>
+    -->
+
+     <!-- Support (tab-4) -->
+     <div id="tab-4" style="background-color: #ffffff;">
+        <h3 style="text-align: center;">Sit down with ICTO</h3>
+        <p><img src="https://canvas.uva.nl/courses/8175/files/7638613/preview" alt="Final grades support website banner.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7638613" data-api-returntype="File" /></p>
+        <p>&nbsp;</p>
+        <h3 style="text-align: center;"><span style="font-size: 18pt; color: #000000;">Book an appointment with ICTO</span></h3>
+        <hr />
+        <p><iframe style="border: 0;" src="https://outlook.office365.com/owa/calendar/ICTOSocialSciences@Amsuni.onmicrosoft.com/bookings/" width="100%" height="1620px"></iframe></p>
+        <p>&nbsp;</p>
+        <h3 style="text-align: center;"><span style="font-size: 18pt; color: #000000;">Our team</span></h3>
+        <hr />
+        <div class="content-box" style="background-color: #ffffff; border-color: #ffffff; padding-left: 15px; margin-top: 25px;">
+            <table style="width: 100%; padding: 15px;">
+                <tbody>
+                    <tr>
+                        <td style="width: 100%;" colspan="4">
+                            <h4 style="text-align: center;"><span style="font-size: 1rem; color: #333333;"> ICTO Social Sciences consists of an enthusiastic team of student-assistants and regular employees. The student-assistants have a variable schedule of 16 hours per week as they combine their studies and ICTO.</span></h4>
+                            <h4 style="text-align: center;"><span style="font-size: 1rem; color: #333333;"><br /></span><strong></strong></h4>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="width: 15%;"><img style="width: auto; float: center; height: 140px; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7105585/preview" alt="shoot (231) kopie.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105585" data-api-returntype="File" /></td>
+                        <td style="width: 35%; vertical-align: top; padding: 10px;"><strong>Lisanne van den Boomen</strong> <br /><i>ICTO Coordinator <br />Working days: tue - fri</i></td>
+                        <td style="width: 15%;"><img style="width: auto; float: center; height: 140px; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7117427/preview" alt="olivier.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7117427" data-api-returntype="File" /></td>
+                        <td style="width: 35%; vertical-align: top; padding: 10px;"><strong>Olivier Oude Booijink</strong> <br /><i>Team member ICTO <br />Working days: mo - thu</i></td>
+                    </tr>
+                    <tr>
+                        <td style="width: 15%;"><img style="width: auto; float: center; height: 140px; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7105587/preview" alt="afbeeling_Maaike_H_2.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105587" data-api-returntype="File" /></td>
+                        <td style="width: 35%; vertical-align: top; padding: 10px;"><strong>Maaike de Hart</strong> <br /><i>Team member ICTO <br />Working days: mo - thu (partially at POW)</i></td>
+                        <td style="width: 15%;"><img style="width: auto; float: center; height: 140px; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7105584/preview" alt="Robyn.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105584" data-api-returntype="File" /></td>
+                        <td style="width: 35%; vertical-align: top; padding: 10px;"><strong>Robyn Hamminga</strong> <br /><i>Student-assistant ICTO <br />Variable working days</i></td>
+                    </tr>
+                    <tr>
+                        <td style="width: 15%;"><img style="width: auto; float: center; height: 140px; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7105583/preview" alt="Piotr.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/7105583" data-api-returntype="File" /></td>
+                        <td style="width: 35%; vertical-align: top; padding: 10px;"><strong>Piotr Breedveld</strong> <br /><i>Student-assistant ICTO <br />Variable working days</i></td>
+                        <td style="width: 15%;"></td>
+                        <td style="width: 35%; vertical-align: top; padding: 10px;"></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <p>&nbsp;</p>
+        <p style="text-align: center;"><a class="btn Button--secondary" style="margin: 5px; margin-right: 20px;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a></p>
+        <p>&nbsp;</p>
+    </div>
+
+    <!-- SIS (tab-5) -->
+    <div id="tab-5" style="background-color: #ffffff;">
+        <h3 style="text-align: center;">About SIS</h3>
+        <div class="grid-row">
+            <!-- Get ready -->
+            <div class="col-xs-12 col-md-4">
+                <div class="styleguide-section__grid-demo-element">
+                    <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 25px; height: 600px; background-color: #fbfbfc;">
+                        <!-- Titel -->
+                        <div class="content-box pad-box-mini border border-b">
+                            <h4><span style="color: #000000;"><strong><span style="font-size: 15pt;">Get Ready</strong></span></h4>
+                            <p><span style="color: #34495e;"><em> <span style="font-size: 11pt;">Mind the following before you start submitting the grades to SIS</span> </em></span></p>
+                        </div>
+                        <!-- mobiel 2FA -->
+                        <p><span style="font-size: 11pt;"><img id="4654665" src="https://canvas.uva.nl/courses/8175/files/4654665/preview" alt="Templafy_Smartphone iphone_Icoon.svg" width="25" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4654665" data-api-returntype="File" />&nbsp; &nbsp; <strong>Two-factor Authentication</strong></span></p>
+                        <p><span style="font-size: 11pt;"><em>Take your mobile phone, you'll need it for Two Factor Authentication (2FA) <a href="https://medewerker.uva.nl/content-secured/az/tweestapsverificatie/surf/surf.html" target="_blank" rel="noopener">(view more)</a></em></span></p>
+                        <!-- Browser -->
+                        <p><span style="font-size: 11pt;"><img id="4654663" src="https://canvas.uva.nl/courses/8175/files/4654663/preview" alt="Templafy_Internet_Icoon.svg" width="22" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4654663" data-api-returntype="File" />&nbsp; &nbsp; <strong>Web browser</strong></span></p>
+                        <p><span style="font-size: 11pt;"><em>Chrome or Firefox are the preferred browsers for Canvas. We strongly advise against using Safari or Microsoft Edge <a href="https://community.canvaslms.com/t5/Canvas-Basics-Guide/What-are-the-browser-and-computer-requirements-for-Instructure/ta-p/66" target="_blank" rel="noopener">(view more)</a></em></span></p>
+                        <!-- Pup-up blockers -->
+                        <p><span style="font-size: 11pt;"><img id="4654663" src="https://canvas.uva.nl/courses/8175/files/4654663/preview" alt="Templafy_Internet_Icoon.svg" width="22" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4654663" data-api-returntype="File" />&nbsp; &nbsp; <strong>Ad-blockers</strong></span></p>
+                        <p><span style="font-size: 11pt;"><em>Remove any pop-up blockers present in your URL search bar <a href="http://lexisnexis.custhelp.com/app/answers/answer_view/a_id/1102020/~/disable-pop-up-blockers-in-most-common-internet-browsers" target="_blank" rel="noopener">(view more)</a></em></span></p>
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Contact -->
+            <div class="col-xs-12 col-md-4">
+                <div class="styleguide-section__grid-demo-element">
+                    <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 25px; height: 600px; background-color: #fbfbfc;">
+                        <!-- Titel -->
+                        <div class="content-box pad-box-mini border border-b">
+                            <h4><span style="color: #000000;"><strong><span style="font-size: 15pt;">Contact</strong></span></h4>
+                            <p><span style="color: #34495e;"><em> <span style="font-size: 11pt;">Who to contact when something goes wrong or you have questions</span> </em></span></p>
+                        </div>
+                        <!-- Uitleg -->
+                        <p><span style="font-size: 11pt;">If you don't see a <span style="color: #000000;"><strong><em>red Submit grades button</strong></em></span>, please get in touch with your <span style="text-decoration: underline;">Programme Coordinator or Manager</span>. They can give you the 'Examiner' rights in SIS. Please note that only the co&ouml;rdinator of the course can submit grades to SIS.&nbsp;</span></p>
+                        <p><span style="font-size: 11pt;">If you have successfully submitted your grades to SIS, but there is an issue of some sort or if you have a <span style="color: #000000;"><strong><em>questions about your grades in SIS</strong></em></span>, please get in touch with the <span style="text-decoration: underline;">Registrar's office</span> (<a class="inline_disabled" href="mailto:gradeadmin-sw@uva.nl" target="_blank" rel="noopener">gradeadmin-sw@uva.nl</a>).</span></p>
+                        <p>&nbsp;</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Send Grades to SIS -->
+            <div class="col-xs-12 col-md-4">
+                <div class="styleguide-section__grid-demo-element">
+                    <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 25px; height: 600px; background-color: #fbfbfc;">
+                        <!-- Titel -->
+                        <div class="content-box pad-box-mini border border-b">
+                            <h4><span style="color: #000000;"><strong><span style="font-size: 15pt;">Instructions</strong></span></h4>
+                            <p><span style="color: #34495e;"><em> <span style="font-size: 11pt;">How to submit both final grades (1st try) and retake grades (2nd try) to SIS</span> </em></span></p>
+                        </div>
+                        <!-- button 1 -->
+                        <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="width: 85%; height: 40%; text-align: left; margin-left: auto; margin-right: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-submit-final-and-retake-grade-to-sis/" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-submit-final-and-retake-grade-to-sis" data-api-returntype="Page"> <span><i class="icon-arrow-right">&nbsp; &nbsp;</i> Submit Grades to SIS</span> </a> </span></p>
+                        <!-- button 2 -->
+                        <p style="text-align: left;"><span style="font-size: 15pt;"> <a id="" class="Button Button" style="width: 85%; height: 40%; text-align: left; margin-left: auto; margin-right: auto;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis-correction-for-final-and-retake-grade" target="_blank" rel="noopener" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool-sis-correction-for-final-and-retake-grade" data-api-returntype="Page"> <span style="color: #000000;"><i class="icon-refresh">&nbsp; &nbsp;</i>SIS Grade Correction</span> </a> </span></p>
+                        <!-- When to use corrections-->
+                        <div id="dialog_for_corrections1" class="enhanceable_content dialog" style="font-size: 12pt;"><strong>Use the correction-mode when:</strong><br /><br /><strong>You've already submitted grades to SIS, but you need to adjust one or more grades</strong>. For example, after the exam inspection has taken place. If this is the case, a correction must be made in order to submit the correct grades to SIS.<br /><br /><em>Grades have been submitted to SIS when you see one (1st try) or two (2nd try) green checkmarks in front of the students' names in the Final Grades tool. </em></div>
+                        <p style="text-align: left;"><span style="font-size: 15pt;"><a id="corrections1" class="Button Button--link" style="width: 94%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" href="#dialog_for_corrections1"><span style="color: #000000;"><i class="icon-question"></i>&nbsp; &nbsp; <em>When to use corrections? </em></span></a></span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
