--- a/A-Z/Grades/SIS/correction_retake.html
+++ b/A-Z/Grades/SIS/correction_retake.html
@@ -6,8 +6,8 @@
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"><span style="color: #a60f0f;"><i class="icon-home"></i>&nbsp;<strong>Final Grades Homepage</strong></span> </a>
                 <a class="btn Button--primary" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;SIS Homepage</span> </a>
-                <a class="btn Button--primary" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Final Grades Homepage</span> </a>
                 <a class="btn Button" style="margin: 5px;" href="#symbols"><span style="color: #a60f0f;"><i class="icon-info"></i> &nbsp; <strong>Symbols</strong></span> </a></div>
         </div>
     </div>
