--- a/A-Z/Grades/SIS/final_grades_to_sis.html
+++ b/A-Z/Grades/SIS/final_grades_to_sis.html
@@ -1,16 +1,13 @@
 <!-- Anchor link -->
 <p><a id="topmenu"></a></p>
 
-<!-- Banner -->
-<p><img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/5129455/preview" alt="FinalGradesMenuBanner-1.jpg" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/5129455" data-api-returntype="File" /></p>
-
 <!-- Menubalk -->
 <div class="grid-row">
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
             <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
+                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"><span style="color: #a60f0f;"><i class="icon-home"></i>&nbsp;<strong>Final Grades Homepage</strong></span> </a>
                 <a class="btn Button--primary" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/final-grades-tool-sis" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;SIS Homepage</span> </a>
-                <a class="btn Button--primary" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Final Grades Homepage</span> </a>
                 <a class="btn Button" style="margin: 5px;" href="#symbols"><span style="color: #a60f0f;"><i class="icon-info"></i> &nbsp; <strong>Symbols</strong></span> </a></div>
         </div>
     </div>
