vraag 1.1. how do i grade in testvision toegevoegd aan de assessment guide

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -70,8 +70,8 @@
 
             <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>1. Grading the exam</em>  <i class="icon-check"></i></strong></span></p></h3>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G1">1.1. How do I grade in TestVision?</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G2">1.2. Can I distribute work across multiple graders?</a></span></p>
-            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G3">1.3. I've finished grading. Where can I see my grades?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G2">1.2. I've finished grading. Where can I see the grades?</a></span></p>
+            <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_G3">1.3. Can I distribute work across multiple graders?</a></span></p>
             <br>
             <h3><p style="text-align: center;"><span style="color: #000000; font-size: 14pt;"><strong><em>2. Editing and analyzing scores</em>  <i class="icon-stats"></i></strong></span></p></h3>
             <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_A1">2.1. How do I mark another answer as correct in multiple choice questions?</a></span></p>
@@ -126,7 +126,149 @@
                         <span style="font-size: 14pt;">1.</span>
                     </strong></td>
                 <td style="width: 90%; border-style: hidden; height: auto;"><strong>
-                    Go to the <span style="text-decoration: underline;">Grading</span> menu
+                    Go to the <u>Grading</u> menu.
+                </strong></td>
+            </tr>
+            <tr style="height: 201px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
+                        <span style="font-size: 14pt;">&nbsp;</span>
+                    </strong></td>
+                <td style="width: 90%; border-style: hidden; height: auto;">
+                    <img src="https://canvas.uva.nl/courses/8175/files/7705627/preview" alt="grading_menu-1.png" />
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 2 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>2.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <strong>Go to the <u>Grader</u> tab and click on <u>Grade</u>.</strong>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <img src="https://canvas.uva.nl/courses/8175/files/7705646/preview" alt="grader_overview.png" />
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 3 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>3.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <strong>Start grading by clicking on <u>Grade</u> next to the desired student. You can also choose to grade by question, by going to the <u>Grade per question</u> tab.</strong>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <img src="https://canvas.uva.nl/courses/8175/files/7705790/preview" alt="grading_students-2.png" />
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 4 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>4.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <strong>A new window will open in which you can assign points based on the criteria of a question. When you're done grading a question, click on <u>Next</u> to go the next question (or student).</strong>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <img src="https://canvas.uva.nl/courses/8175/files/7705555/preview" alt="grading.png" />
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 5 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>5.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <strong>When you've graded all students, make sure to click on <u>Validate</u> to generate the grades based on the points you've assigned.</strong>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <img src="https://canvas.uva.nl/courses/8175/files/7705819/preview" alt="validate-1.png" />
+                    <br>
+                    <br>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i>
+        <span>&nbsp;Back to top</span>
+    </a>
+    <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#PLACEHOLDER"> <i class="icon-forward"></i>
+        <span>&nbsp;Next: PLACEHOLDER</em></span>
+    </a>
+</div>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+<!-- --------------------------------------- FAQ 1.2 --------------------------------------- -->
+<p><a id="FAQ_G2"></a></p>
+<p>&nbsp;</p>
+
+<!-- Buttons-->
+<h5 style="text-align: center;">
+    <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i>
+        <span>&nbsp;Back to top</span>
+    </a>
+    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
+    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a>
+</h5>
+<!-- Header -->
+<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
+<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
+    <h4><strong>1.2. I've finished grading. Where can I see the grades?</strong></h4>
+</div>
+<!-- Instructie -->
+<div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px; padding-top: 35px;">
+    <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden;">
+        <tbody>
+            <!-- stap 1 -->
+            <tr style="height: auto;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
+                        <span style="font-size: 14pt;">1.</span>
+                    </strong></td>
+                <td style="width: 90%; border-style: hidden; height: auto;"><strong>
+                    Make sure you've validated the grades.
                 </strong></td>
             </tr>
             <tr style="height: 201px; padding-bottom: 8px;">
@@ -203,8 +345,8 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<!-- --------------------------------------- FAQ 1.2 --------------------------------------- -->
-<p><a id="FAQ_G2"></a></p>
+<!-- --------------------------------------- FAQ 1.3 --------------------------------------- -->
+<p><a id="FAQ_G3"></a></p>
 <p>&nbsp;</p>
 
 <!-- Buttons-->
@@ -218,7 +360,7 @@
 <!-- Header -->
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-    <h4><strong>1.2. Can I distribute work across multiple graders?</strong></h4>
+    <h4><strong>1.3. Can I distribute work across multiple graders?</strong></h4>
 </div>
 <!-- Instructie -->
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px; padding-top: 35px;">
@@ -291,110 +433,6 @@
     </a>
     <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#PLACEHOLDER"> <i class="icon-forward"></i>
         <span>&nbsp;Next: PLACEHOLDER</em></span> 
-    </a>
-</div>
-
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-
-<!-- --------------------------------------- FAQ 1.3 --------------------------------------- -->
-<p><a id="FAQ_G3"></a></p>
-<p>&nbsp;</p>
-
-<!-- Buttons-->
-<h5 style="text-align: center;">
-    <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i>
-        <span>&nbsp;Back to top</span>
-    </a>
-    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
-    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a>
-</h5>
-<!-- Header -->
-<hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-    <h4><strong>1.3. I've finished grading. Where can I see my grades?</strong></h4>
-</div>
-<!-- Instructie -->
-<div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px; padding-top: 35px;">
-    <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden;">
-        <tbody>
-            <!-- stap 1 -->
-            <tr style="height: auto;">
-                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
-                        <span style="font-size: 14pt;">1.</span>
-                    </strong></td>
-                <td style="width: 90%; border-style: hidden; height: auto;"><strong>
-                    Go to the <span style="text-decoration: underline;">Grading</span> menu
-                </strong></td>
-            </tr>
-            <tr style="height: 201px; padding-bottom: 8px;">
-                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
-                        <span style="font-size: 14pt;">&nbsp;</span>
-                    </strong></td>
-                <td style="width: 90%; border-style: hidden; height: auto;">
-                    <img src="https://canvas.uva.nl/courses/8175/files/7632442/preview" alt="grading_menu.png" />
-                    <br>
-                    <br>
-                </td>
-            </tr>
-            <!-- stap 2 -->
-            <tr style="height: 45px; padding-bottom: 8px;">
-                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
-                    <span style="font-size: 14pt;"><strong>2.</strong></span>
-                </td>
-                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
-                    <strong>STAP</strong>
-                </td>
-            </tr>
-            <tr>
-                <td style="width: 10.4059%; border-style: hidden;">
-                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
-                </td>
-                <td style="width: 89.5941%; border-style: hidden;">
-                    PLAATJE (OF TEKST)
-                    <br>
-                    <br>
-                </td>
-            </tr>
-            <!-- stap 3 -->
-            <tr style="height: 45px; padding-bottom: 8px;">
-                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
-                    <span style="font-size: 14pt;"><strong>3.</strong></span>
-                </td>
-                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
-                    <strong>STAP</strong>
-                </td>
-            </tr>
-            <tr>
-                <td style="width: 10.4059%; border-style: hidden;">
-                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
-                </td>
-                <td style="width: 89.5941%; border-style: hidden;">
-                    PLAATJE (OF TEKST)
-                    <br>
-                    <br>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div>
-
-<div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-    <a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i>
-        <span>&nbsp;Back to top</span>
-    </a>
-    <a class="btn Button--primary" style="margin: 3px; background-color: #08a8a2; border-color: #c7cdd1;" href="#PLACEHOLDER"> <i class="icon-forward"></i>
-        <span>&nbsp;Next: PLACEHOLDER</em></span>
     </a>
 </div>
 
