plaatje in assessment instructie vervangen door eentje met een iets minder gekke vraag

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -260,7 +260,7 @@
                     <span style="font-size: 14pt;"><strong>4.</strong></span>
                 </td>
                 <td style="width: 89.5941%; height: 10px; border-style: hidden;">
-                    <strong>A new window will open in which you can assign points based on the criteria of a question. When you're done grading a question, click on <u>Next</u> to go the next question (or student).</strong>
+                    <strong>A new window will open in which you can assign points based on the criteria of a question. When you're done grading a question, click on <u>Next</u> to go the next question.</strong>
                 </td>
             </tr>
             <tr>
@@ -268,7 +268,7 @@
                     <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
                 </td>
                 <td style="width: 89.5941%; border-style: hidden;">
-                    <img src="https://canvas.uva.nl/courses/8175/files/7705555/preview" alt="grading.png" />
+                    <img src="https://canvas.uva.nl/courses/8175/files/7754515/preview" alt="grading-1.png" />
                     <br>
                     <br>
                 </td>
