typfoutje verbeterd: digial -> digital

--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -1070,7 +1070,7 @@
                                         </ul>
                                         <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
                                             <li>
-                                                <span style="color: #ffffff;"><strong>Digial examination software</strong></span>
+                                                <span style="color: #ffffff;"><strong>Digital examination software</strong></span>
                                             </li>
                                         </ul>
                                     </div>
