--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23_BACKUP.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23_BACKUP.html
@@ -276,7 +276,7 @@
                     <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
                 </td>
                 <td style="width: 89.5941%; border-style: hidden;">
-                    <img src="https://canvas.uva.nl/courses/8175/files/7754515/preview" alt="grading-1.png" />
+                    <img src="https://canvas.uva.nl/courses/8175/files/7705555/preview" alt="grading.png" />
                     <br>
                     <br>
                     <br>
