overbodige css weggehaald

--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -7,7 +7,7 @@
 <p><a id="topmenu"></a></p>
 
 <!-- Menubalk -->
-<div class="grid-row" style="position: ">
+<div class="grid-row">
     <div class="col-xs-12 col-md-12">
         <div class="styleguide-section__grid-demo-element">
             <nav class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; text-align: center;">
