--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -160,7 +160,7 @@
             <div class="col-xs-12 col-md-20">
                 <div class="styleguide-section__grid-demo-element">
                     <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #fafafa; padding: 15px;">
-
+                        
                         <!-- Titel -->
                         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #F1F4F9; height: 50px; text-align: center; width: auto;">
                             <p style="text-align: left;">
@@ -168,93 +168,98 @@
                             </p>
                         </div>
 
+
                         <!-- Box -->
                         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; background-color: #E6EBED; padding: 15px;">
 
+                        <!-- Properties for all buttons-->
+                        <span style="color: #236fa1; font-size: 14pt; text-align: left;">
+
+
                             <!-- Atlas.ti -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Atlas.ti" href="https://canvas.uva.nl/courses/8175/pages/atlas-dot-ti" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/atlas-dot-ti" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Atlas.ti" href="https://canvas.uva.nl/courses/8175/pages/atlas-dot-ti" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/atlas-dot-ti" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" id="4499267" src="https://canvas.uva.nl/courses/8175/files/4499267/preview" alt="18-04-17_atlasti_logo_v2-300x194.png" width="45" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4499267" data-api-returntype="File" /><span style="color: #000000;">Atlas.ti</span>
                                 </a>
                             </p>
 
                             <!-- Feedbackfruits -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="FeedbackFruits" href="https://canvas.uva.nl/courses/8175/pages/feedbackfruits-overview-tools-for-enriched-learning-materials" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/feedbackfruits-overview-tools-for-enriched-learning-materials" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="FeedbackFruits" href="https://canvas.uva.nl/courses/8175/pages/feedbackfruits-overview-tools-for-enriched-learning-materials" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/feedbackfruits-overview-tools-for-enriched-learning-materials" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4384785/preview" alt="FeedbackFruits-Logo.png" width="45" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4384785" data-api-returntype="File" /><span style="color: #000000;">Feedbackfruits</span>
                                 </a>
                             </p>
 
                             <!-- Final Grades -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="45" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">Final Grades</span>
                                 </a>
                             </p>
 
                             <!-- Kaltura -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Kaltura/MyMedia" href="https://canvas.uva.nl/courses/8175/pages/kaltura-faqs-how-tos-and-tips-and-tricks-2" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/kaltura-faqs-how-tos-and-tips-and-tricks-2" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Kaltura/MyMedia" href="https://canvas.uva.nl/courses/8175/pages/kaltura-faqs-how-tos-and-tips-and-tricks-2" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/kaltura-faqs-how-tos-and-tips-and-tricks-2" data-api-returntype="Page">
                                     <img style="margin-right: 23px;" src="https://canvas.uva.nl/courses/8175/files/4378101/preview" alt="319096.png" width="40" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378101" data-api-returntype="File" /><span style="color: #000000;">Kaltura</span>
                                 </a>
                             </p>
 
                             <!-- Office -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Office365" href="https://medewerker.uva.nl/en/content-secured/az/microsoft-365/microsoft-365.html" target="" data-api-endpoint="https://medewerker.uva.nl/en/content-secured/az/microsoft-365/microsoft-365.html" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Office365" href="https://medewerker.uva.nl/en/content-secured/az/microsoft-365/microsoft-365.html" target="" data-api-endpoint="https://medewerker.uva.nl/en/content-secured/az/microsoft-365/microsoft-365.html" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/5126632/preview" alt="office365-427x427.png" width="40" height="40" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378101" data-api-returntype="File" /><span style="color: #000000;">Office 365</span>
                                 </a>
                             </p>
 
                             <!-- Ouriginal -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Ouriginal" href="https://canvas.uva.nl/courses/8175/pages/ouriginal-homepage" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/ouriginal-homepage" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Ouriginal" href="https://canvas.uva.nl/courses/8175/pages/ouriginal-homepage" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/ouriginal-homepage" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" id="4377529" src="https://canvas.uva.nl/courses/8175/files/4497519/preview" alt="ouriginal.png" width="44" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4497519" data-api-returntype="File" /><span style="color: #000000;">Ouriginal</span>
                                 </a>
                             </p>
 
                             <!-- Perusall -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Perusall" href="https://canvas.uva.nl/courses/8175/pages/perusall-tips" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/perusall-tips" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Perusall" href="https://canvas.uva.nl/courses/8175/pages/perusall-tips" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/perusall-tips" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4384821/preview" alt="14995_Perusall_logo.png" width="44" height="44" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4384821" data-api-returntype="File" /><span style="color: #000000;">Perusall</span>
                                 </a>
                             </p>
 
                             <!-- Qualtrics -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Qualtrics" href="https://canvas.uva.nl/courses/8175/pages/qualtrics" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/qualtrics" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Qualtrics" href="https://canvas.uva.nl/courses/8175/pages/qualtrics" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/qualtrics" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4384694/preview" alt="Logo-Qualtrics.png" width="44" height="49" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4384694" data-api-returntype="File" /><span style="color: #000000;">Qualtrics</span>
                                 </a>
                             </p>
 
                             <!-- Wooclap -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Wooclap" href="https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/wooclap-interaction-with-your-audience/wooclap-interaction-with-your-audience.html" target="" data-api-endpoint="https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/wooclap-interaction-with-your-audience/wooclap-interaction-with-your-audience.html" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Wooclap" href="https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/wooclap-interaction-with-your-audience/wooclap-interaction-with-your-audience.html" target="" data-api-endpoint="https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/wooclap-interaction-with-your-audience/wooclap-interaction-with-your-audience.html" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" id="4497437" src="https://canvas.uva.nl/courses/8175/files/5126635/preview" alt="wooclap-logo.png" width="46" height="46" data-api-returntype="File" /><span style="color: #000000;">Wooclap</span>
                                 </a>
                             </p>
 
                             <!-- SurfDrive -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="SurfDrive" href="https://canvas.uva.nl/courses/8175/pages/surfdrive-homepage" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/surfdrive-homepage" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="SurfDrive" href="https://canvas.uva.nl/courses/8175/pages/surfdrive-homepage" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/surfdrive-homepage" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4384813/preview" alt="download.png" width="44" height="44" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4384813" data-api-returntype="File" /><span style="color: #000000;">SurfDrive</span>
                                 </a>
                             </p>
 
                             <!-- TestVision -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="TestVision" href="https://canvas.uva.nl/courses/8175/pages/testvision" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="TestVision" href="https://canvas.uva.nl/courses/8175/pages/testvision" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4378110/preview" alt="TEELEN-Logo-RGB.png" width="43" height="43" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378110" data-api-returntype="File" /><span style="color: #000000;">TestVision</span>
                                 </a>
                             </p>
 
                             <!-- Zoom -->
                             <p>
-                                <a id="" class="Button Button--large" style="border-color: #063852; width: 100%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Zoom" href="https://canvas.uva.nl/courses/8175/pages/using-zoom-in-canvas-for-teaching" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/using-zoom-in-canvas-for-teaching" data-api-returntype="Page">
+                                <a id="" class="Button Button--large" style="border-color: #063852; width: 90%; height: 20%; text-align: left; margin-left: auto; margin-right: auto;" title="Zoom" href="https://canvas.uva.nl/courses/8175/pages/using-zoom-in-canvas-for-teaching" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/using-zoom-in-canvas-for-teaching" data-api-returntype="Page">
                                     <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4378112/preview" alt="98e289839f8d24fd7884d683d0abae84.png" width="42" height="42" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378112" data-api-returntype="File" /><span style="color: #000000;">Zoom</span>
                                 </a>
                             </p>
-
+                            </span>
                         </div>
                     </div>
                 </div>
