newsletter blok 3 update

--- a/Nieuwsbrief/22-23-blok2.html
+++ b/Nieuwsbrief/22-23-blok2.html
@@ -137,11 +137,17 @@
           <tr>
   
             <td style="width:50%; vertical-align: top; padding-right: 15px">
-                <p style="font-size: 12pt">[tekst]</p>
+                <p style="font-size: 12pt">From the 1st of March 2023, it will no longer be possible for you to log into your account at uvasocialsciences.eu.qualtrics.com. This domain-specific environment is being phased out and replaced by a new UvA-wide Qualtrics environment at <a href="https://uva.eu.qualtrics.com/"> uva.eu.qualtrics.com</a>
+                    <br><br> This new environment offers several benefits, including easier collaboration with students and colleagues and enhanced security through the use of 2-factor authentication via Tiqr.
+                    <br><br>Any questions? Please contact us via <a href="mailto: icto-csw@uva.nl">icto-csw@uva.nl</a>. 
+                    </p>
                 </td>
   
             <td style="width:50%; vertical-align: top; padding-right: 15px">
-                <p style="font-size: 12pt">[tekst]</p>
+                <p style="font-size: 12pt">We are very happy to see that our message in the last newsletter was received by so many teachers! We’ve already met with a lot of you to talk you through your final grades set up.
+                    <br><br>We highly encourage you to schedule an appointment if you haven’t already done so. We often hear from teachers that these kinds of meetings take away a lot of stress, and they make the process not only easier but also more enjoyable. By doing this way ahead of time, submitting grades to SIS will be a breeze when the moment comes! 
+                     <br><br>You can make an appointment by clicking <a href="https://outlook.office365.com/owa/calendar/ICTOSocialSciences@Amsuni.onmicrosoft.com/bookings/">this link</a>. This can be done <b>online</b> or <b>on location</b>.
+                    </p>
             </td>
   
           </tr>
@@ -199,7 +205,8 @@
         <tr>
   
           <td style="width:50%;vertical-align:top;padding-right:15px">
-              <p style="font-size: 12pt">[tekst]
+              <p style="font-size: 12pt">What is it? With edu.nl, you can create shorter links for all your long URLs. It is both secure and privacy-friendly! So, how does it work? Go to <a href="https://edu.nl/">edu.nl</a>, and login with SURFconext. Paste the long URL and click <i>Shorten it!</i>. A shorter link starting with ‘edu.nl’ is created and it also generates a corresponding QR code.
+                <br><br>Note: URLs can only be shortened by verified individuals from Dutch education and research. Visitors of the links are not tracked or followed.                
             </p>
           </td>
   
@@ -258,7 +265,7 @@
                 </td>
   
                 <td style="width:90%; vertical-align:center; padding-left:10px;border-bottom:10px solid #f6f7f8">
-                   Holidays: this week, there's no teaching or assessment.<br>
+                   Holidays! In this week, there's no teaching or assessment.<br>
                 </td>
   
             </tr>
@@ -300,7 +307,7 @@
                 </td>
   
                 <td style="width:90%; vertical-align:center; padding-left:10px;border-bottom:10px solid #f6f7f8">
-                 The domain-specific Qualtrics environment (uvasocialsciences.eu.qualtrics.com) is being phased out and replaced by a UvA-wide Qualtrics environment (<a href="https://uva.eu.qualtrics.com/">uva.eu.qualtrics.com</a></a>).
+                 The domain-specific Qualtrics environment (uvasocialsciences.eu.qualtrics.com) is being phased out and replaced by the UvA-wide Qualtrics environment (<a href="https://uva.eu.qualtrics.com/">uva.eu.qualtrics.com</a></a>).
                  
                  <br>
                 </td>
